CHATS_SIT/force-app/main/default/objects/T_INDIV_EDUC_INFO__c/validationRules/Activity_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Activity_End_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IDN_EDUC_INDIV__r.DTE_END_EFFV__c &lt; DTE_END_EFFV__c, NOT(ISBLANK(IDN_EDUC_INDIV__r.DTE_END_EFFV__c) ))</errorConditionFormula>
    <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
    <errorMessage>Effective End Date cannot be after the Activity Effective End Date</errorMessage>
</ValidationRule>